Fixed missing border radius on hover.
Fixed missing border radius on hover.

--- a/style.css
+++ b/style.css
@@ -89,6 +89,7 @@ button.sedan-button {
 button.sedan-button:hover {
     color: var(--transparent-white);
     outline: 2px solid var(--transparent-white);
+    border-radius: 2rem;
     outline-offset: -2px;
     background-color: var(--bright-orange);
 }
